made changes as per comments by reviewer

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body> <!-- ***** body begins here ***** -->
   <nav class="navigation"> <!-- ***** navigation ***** -->
-    <div>
-      <h2>The Ketogenic Diet 101</h2>
-      <h3> TABLE OF CONTENTS</h3>
+    <div class="divstyle1">
+      <h2 class="header">The Ketogenic Diet 101</h2>
+      <h3 class="header"> Table of Contents</h3>
       <ul class="navul">
         <li><a href="#introduction">Introduction</a></li>
         <li><a href="#whatis">What is a Ketogenic Diet?</a></li>
@@ -27,22 +27,22 @@
   <main class="content"> <!-- ***** main ***** -->
     <article>  <!-- ***** content starts here ***** -->
       <div id="introduction">
-        <h1>The Ketogenic Diet 101: A Detailed Beginner's Guide </h1>
+        <h1 class="header">THE KETOGENIC 101: A BEGINNER'S GUIDE</h1>
         <p>The ketogenic diet is a low-carb, high-fat diet that offers many health benefits. </p>
-        <p>Over 20 studies show that this type of diet can help you lose weight and improve health.</p>
+        <p>Over <a href="https://www.healthline.com/nutrition/23-studies-on-low-carb-and-low-fat-diets" target="_blank">20 studies</a> show that this type of diet can help you lose weight and improve health.</p>
         <p>Ketogenic diets may even have benefits against diabetes, cancer, epilepsy and Alzheimer's disease.</p>
         <p>This article is a detailed beginner's guide to the ketogenic diet.</p>
         <p>It contains everything you need to know.</p>
       </div>
-      <div id="whatis">
-        <h2>What is a Ketogenic Diet?</h2>
-        <p>The ketogenic diet (often termed keto) is a very low-carb, high-fat diet that shares many similarities with the Atkins and low-carb diets.</p>
-        <p>It involves drastically reducing carbohydrate intake, and replacing it with fat. The reduction in carbs puts your body into a metabolic state called ketosis.</p>
+      <div id="whatis" class="divstyle2">
+        <h2 class="header">What is a Ketogenic Diet?</h2>
+        <p>The ketogenic diet (often termed keto) is a very low-carb, high-fat diet that shares many similarities with the <a href="https://en.wikipedia.org/wiki/Atkins_diet" target="_blank"> Atkins</a> and low-carb diets.</p>
+        <p>It involves drastically reducing carbohydrate intake, and replacing it with fat. The reduction in carbs puts your body into a metabolic state called <a href="https://www.healthline.com/nutrition/what-is-ketosis">ketosis</a>.</p>
         <p>When this happens, your body becomes incredibly efficient at burning fat for energy. It also turns fat into ketones in the liver, which can supply energy for the brain.</p>
         <p>Ketogenic diets can cause massive reductions in blood sugar and insulin levels. This, along with the increased ketones, has numerous health benefits.</p>
       </div>
       <div id="difftype">
-        <h2>Different Types of Ketogenic Diets</h2>
+        <h2 class="header">Different Types of Ketogenic Diets</h2>
         <p>There are several versions of the ketogenic diet, including:</p>
         <ul>
           <li><b>Standard ketogenic diet (SKD):</b> This is a very low-carb, moderate-protein and high-fat diet. It typically contains 75% fat, 20% protein and only 5% carbs.</li>
@@ -53,8 +53,8 @@
         <p>However, only the standard and high-protein ketogenic diets have been studied extensively. Cyclical or targeted ketogenic diets are more advanced methods, and primarily used by bodybuilders or athletes.</p>
         <p>The information in this article mostly applies to the standard ketogenic diet (SKD), although many of the same principles also apply to the other versions.</p>
       </div>
-      <div id="ketoloseweight">
-        <h2>Ketogenic Diets Can Help You Lose Weight</h2>
+      <div id="ketoloseweight" class="divstyle2">
+        <h2 class="header">Ketogenic Diets Can Help You Lose Weight</h2>
         <p>A ketogenic diet is an effective way to lose weight and lower risk factors for disease.</p>
         <p>In fact, research shows that the ketogenic diet is far superior to the recommended low-fat diet.</p>
         <p>What's more, the diet is so filling that you can lose weight without counting calories or tracking your food.</p>
@@ -65,7 +65,7 @@
         <p>For more details on the weight loss effects of a ketogenic diet, read this article: A Ketogenic Diet to Lose Weight and Fight Disease.</p>
       </div>
       <div id="ketodiabetes">
-        <h2>Ketogenic Diets for Diabetes and Prediabetes</h2>
+        <h2 class="header">Ketogenic Diets for Diabetes and Prediabetes</h2>
         <p>Diabetes is characterized by changes in metabolism, high blood sugar and impaired insulin function.</p>
         <p>The ketogenic diet can help you lose excess fat, which is closely linked to type 2 diabetes, prediabetes and metabolic syndrome.</p>
         <p>One study found that the ketogenic diet improved insulin sensitivity by a whopping 75%.</p>
@@ -73,8 +73,8 @@
         <p>In yet another study, the ketogenic group lost 24.4 lbs (11.1 kg), compared to 15.2 lbs (6.9 kg) in the higher-carb group. This is an important benefit when considering the link between weight and type 2 diabetes.</p>
         <p>Additionally, 95.2% of the ketogenic group was also able to stop or reduce diabetes medication, compared to 62% in the higher-carb group.</p>
       </div>
-      <div id="otherbenefits">
-        <h2>Other Health Benefits of the Ketogenic Diet</h2>
+      <div id="otherbenefits" class="divstyle2">
+        <h2 class="header">Other Health Benefits of the Ketogenic Diet</h2>
         <p>The ketogenic diet actually originated as a tool for treating neurological diseases, such as epilepsy.</p>
         <p>Studies have now shown that the diet can have benefits for a wide variety of different health conditions:</p>
         <ul>
@@ -111,8 +111,8 @@
         <p>This means you’ll need to completely avoid sweet sugary foods, plus starchy foods like bread, pasta, rice and potatoes. Basically follow the guidelines for a strict low-carb diet, and remember it’s supposed to be high in fat, not high in protein.</p>
         <p>A rough guideline is below 10% energy from carbohydrates (the fewer carbs, the more effective), 15-25% protein (the lower end is more effective), and 70% or more from fat.</p>
       </div>
-      <div id="foods2eat">
-        <h2>Foods to Eat</h2>
+      <div id="foods2eat" class="divstyle2">
+        <h2 class="header">Foods to Eat</h2>
         <p>You should base the majority of your meals around these foods:</p>
         <ul>
           <li><b>Meat:</b> Red meat, steak, ham, sausage, bacon, chicken and turkey.</li>
@@ -132,7 +132,7 @@
         <p>The most important thing to reach ketosis is to avoid eating most carbohydrates. You’ll probably need to keep carb intake to under 50 grams per day of net carbs, ideally below 20 grams. The fewer carbs the more effective.</p>
       </div>
       <div id="tips4eating">
-        <h2>Tips for Eating Out on a Ketogenic Diet</h2>
+        <h2 class="header">Tips for Eating Out on a Ketogenic Diet</h2>
         <p>It is not very hard to make most restaurant meals keto-friendly when eating out.</p>
         <p>Most restaurants offer some kind of meat or fish-based dish. Order this, and replace any high-carb food with extra vegetables.</p>
         <p>Egg-based meals are also a great option, such as an omelet or eggs and bacon.</p>
@@ -140,8 +140,8 @@
         <p>At Mexican restaurants, you can enjoy any type of meat with extra cheese, guacamole, salsa and sour cream.</p>
         <p>For dessert, ask for a mixed cheese board or double cream with berries.</p>
       </div>
-      <div id="sideeffects">
-        <h2>Side Effects and How to Minimize Them</h2>
+      <div id="sideeffects" class="divstyle2">
+        <h2 class="header">Side Effects and How to Minimize Them</h2>
         <p>Although the ketogenic diet is safe for healthy people, there may be some initial side effects while your body adapts.</p>
         <p>This is often referred to as "keto flu" - and is usually over within a few days.</p>
         <p>Keto flu includes poor energy and mental function, increased hunger, sleep issues, nausea, digestive discomfort and decreased exercise performance.</p>
@@ -151,9 +151,9 @@
         <p>At least in the beginning, it is important to eat until fullness and to avoid restricting calories too much. Usually a ketogenic diet causes weight loss without intentional calorie restriction.</p>
       </div>
       <a href="./index.html"><img src="http://www.lovewell-blake.co.uk/includes/imgs/icon-backtop.png" height="50" width="50" alt="top icon"></a><br> <!-- scroll to toppage -->
-      <div> <!-- ***** this is where i copied the content of my project ***** -->
-        <p class="credits">
-          Credits:<a href="https://www.healthline.com/nutrition/ketogenic-diet-101" target="_blank">Healthline</a> and <a href="https://www.dietdoctor.com/low-carb/keto" target="_blank">Diet Doctor</a> for content and images I used on this project. <a href="http://www.lovewell-blake.co.uk/" target="_blank"> Lovewell Blake</a> for "back-to-top" icon.
+      <div class="credits"> <!-- ***** this is where i copied the content of my project ***** -->
+        <p>
+          Credits: <a href="https://www.healthline.com/nutrition/ketogenic-diet-101" target="_blank">Healthline</a> and <a href="https://www.dietdoctor.com/low-carb/keto" target="_blank">Diet Doctor</a> for content and images I used on this project. <a href="http://www.lovewell-blake.co.uk/" target="_blank"> Lovewell Blake</a> for "back-to-top" icon.
         </p>
       </div>
     </article>
