--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <p>At least in the beginning, it is important to eat until fullness and to avoid restricting calories too much. Usually a ketogenic diet causes weight loss without intentional calorie restriction.</p>
       </div>
       <a href="./index.html"><img src="http://www.lovewell-blake.co.uk/includes/imgs/icon-backtop.png" height="50" width="50" alt="top icon"></a><br> <!-- scroll to toppage -->
-      <div class="credits"> <!-- ***** this is where i copied the content of my project ***** -->
+      <div class="credits"> <!-- **** this is where i copied the content of my project ***** -->
         <p>
           Credits: <a href="https://www.healthline.com/nutrition/ketogenic-diet-101" target="_blank">Healthline</a> and <a href="https://www.dietdoctor.com/low-carb/keto" target="_blank">Diet Doctor</a> for content and images I used on this project. <a href="http://www.lovewell-blake.co.uk/" target="_blank"> Lovewell Blake</a> for "back-to-top" icon.
         </p>
