--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
   </nav>
   <main class="content"> <!-- ***** main ***** -->
-    <article>  <!-- ***** content starts here ***** -->
+    <article>  <!-- **** content starts here **** -->
       <div id="introduction">
         <h1 class="header">THE KETOGENIC 101: A BEGINNER'S GUIDE</h1>
         <p>The ketogenic diet is a low-carb, high-fat diet that offers many health benefits. </p>
